[package]
name = "sunburst"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Simple processing like animation framework with multiple rendering backends"
repository = "https://github.com/faxe1008/sunburst"
readme = "README"

[lib]
name = "sunburst"
path = "src/lib.rs"

[[bin]]
name = "simple_ppm"
path = "examples/simple_ppm/main.rs"


[[bin]]
name = "lissajous"
path = "examples/lissajous/main.rs"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
noto-sans-mono-bitmap = "0.1.5"
sdl2 = "0.35.2"
